# portfolio

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml  test-polo.db  test-polo.db.wal
.nixpacks/: Dockerfile  build.sh
src/: database.rs  db_query.rs  lib.rs  main.rs  pocketbase.rs  templating.rs
src/tests/: mod.rs
static/: htmx.min.js  output.css
templates/: about_me.html  base.html  base_editor.html  editor.html  hello.html  index.html  modal.html  project_details.html  projects.html
templates/components/: about_me_section.html  hero.html  navbar.html
