[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
askama_rocket = "0.12.0"
include_dir = "0.7.4"
rocket = "0.5.1"
rocket-include-dir = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket-json-response = "0.6.5"

